<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlack">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="90dp"
            android:layout_weight="1"
            android:background="@drawable/login_background" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/btn_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/apellidos"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/btn_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/edad"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/btn_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:onClick="onClick"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/btn_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorjaune"
            android:text="@string/editar"
            android:onClick="onClick"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/mostrar"
            android:onClick="onClick"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorrouge"
            android:text="@string/delete"
            android:onClick="onClick"
            android:textColor="@color/colorWhite" />



    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:text="@string/registro"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />




</RelativeLayout>